add responsive feature

--- a/koding ml.html
+++ b/koding ml.html
@@ -1,32 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body bgcolor="black">
-<table>
+<body>
+<table leftmargin="100">
+	<div class="konten2"></div>
 <tr align="center">
-	<td align="left"><img src="ml1.png" height="60"></td>
-	<td width="100" align="right"><font size="5"><font color="white">Heroes</td>
-	<td width="100" align="middle"><font size="5"><font color="white">Top Builds</td>
-	<td width="100" align="right"><font size="5"><font color="white">Recommendations</td>
-	<td width="100" align="right"><font size="5"><font color="white">Contact Us</td>
-	<td width="100" align="middle"><font size="5"><font color="white">Help</td>
-	<td><img src="search.png"></td>
+	<td align="left"><img src="ml1.png" height="200"></td>
+	<td><font size="7" color="white"><a href="http://google.com">Heroes<a/></td>
+		<td></td>
+	<td><font size="7"><a href="http://google.com">Top Builds</a></td>
+		<td></td>
+	<td><font size="7"><a href="http://google.com">Recommendations</a></td>
+		
+	<td><font size="7"><a href="http://google.com">Contact Us</a></td>
+	<td><font size="7"><a href="http://google.com" >Help</a></td>
+		<td>
+	<form>
+		<input class="search" type="text" placeholder="Type Here" required="">
+		<input class="button" type="button" value="Search">
+	</form></td>
 </tr>
 <tr align="center">
-	<td colspan="10"><font size="6"><font color="white"><b>New Heroes</b></td>
-</tr>
-<tr align="center">
-	<td colspan="3">  <font size="5"><font color="white">Hylos</td>
-	<td colspan="3"><font size="5"><font color="white">Valir</td>
-	<td colspan="3"><font size="5"><font color="white">Uranus</td>
+	<td colspan="9"><font size="8"><font color="white"><b>New Heroes</b></td>
 </tr>
 <tr>
-	<td width="50"><img src="7.jpg" height="100"></td>
-	<td width="50"><img src="8.jpg" height="100"></td>
-	<td width="50"><img src="6.jpg" height="100"></td>
+	<td><br></td>
+</tr>
+<tr align="center">
+	<td colspan="2"><font size="7"><font color="white">Hylos</td>
+	<td colspan="4"><font size="7"><font color="white">Valir</td>
+	<td colspan="2"><font size="7"><font color="white">Uranus</td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+	<td colspan="2" align="middle"><img src="7.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="8.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="6.jpg" height="500"></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr align="center">
+	<td colspan="9"><font size="8"><font color="white"><b>New Skins</b></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>	
+	<td colspan="2" align="middle"><img src="11.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="12.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="13.jpg" height="500"></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr align="center">
+	<td colspan="9"><font size="8"><font color="white"><b>   Top Heroes</b></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr align="center">
+	<td colspan="2"><font size="7"><font color="white">Moskov</td>
+	<td colspan="4"><font size="7"><font color="white">Gussion</td>
+	<td colspan="2"><font size="7"><font color="white">Cyclops</td>
+</tr>
+<tr>	
+	<td colspan="2" align="middle"><img src="moskov.png" height="500"></td>
+	<td colspan="4" align="middle"><img src="3.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="cyc.jpg" height="500"></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr align="center">
+	<td colspan="9"><font size="8"><font color="white"><b>Builds</b></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>	
+	<td colspan="2" align="middle"><img src="14.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="15.jpg" height="500"></td>
+	<td colspan="4" align="middle"><img src="16.jpg" height="500"></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+	<td><br></td>
+</tr>
+<tr>
+
+	<td><font size="6"><font color="white">
+		About <br><br>
+		Nama : Grace Dian<br>
+		Kelas : XI RPL 3<br>
+		Absen : 22<br>
+	</td>
+	<td></td>
+	<td></td>
+	<td></td>
+	<td></td>
+	<td></td>
+	<td><img src="17.jpg" height="250"></td>
+	<td align="left"> <font size="6"><font color="white">
+		Privacy and Policy<br>
+		Terms of Service<br>
+		User License and Agreement<br>
+</td>
 </tr>
 </table>
+<tr></tr>
+	<div class="kepala"></div>
 </body>
 </html>
